# pico-sst39sf0x0-programmer

./: .gitignore  README.md
.github/workflows/: build.yml  render.yml
case/: README.md  pico-case-bottom.stl  pico-case-bottom_mouse_ears.stl  pico-case-top.stl  pico-case-top_mouse_ears.stl
case/multi-material/: pico-case-bottom.stl  pico-case-top-36.stl  pico-case-top.stl  pico-label.stl  pico-oshw-logo.stl
firmware/: CMakeLists.txt  README.md  cmds.c  cmds.h  constants.h  main.c  ops.c  ops.h  routines.c  routines.h
gui/: .gitignore  CMakeLists.txt  README.md  installer.nsis  pico-sst39sf0x0-programmer.pro  resources.qrc
gui/packaging/: .gitignore  installscript.qs.template  package-local.sh  package.py  package.sh  setup.iss.template
gui/packaging/config/: config.xml  config.xml.template  installscript.qs
gui/src/: bankviewer.cpp  bankviewer.h  cartridgereadthread.cpp  cartridgereadthread.h  colors.h  config.h  dialogslotselection.cpp  dialogslotselection.h  filedownloader.cpp  filedownloader.h  flashthread.cpp  flashthread.h  hexviewwidget.cpp  hexviewwidget.h  hexwidget.h  ioworker.cpp  ioworker.h  logwindow.cpp  logwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  picoflasherapplication.cpp  picoflasherapplication.h  qhexview.cpp  qhexview.h  readthread.cpp  readthread.h  romsizes.h  serial_interface.cpp  serial_interface.h  settingswidget.cpp  settingswidget.h
pcb/: .gitignore  README.md
pcb/p2000t-slot1-adapter-board/: fp-lib-table  p2000t-slot1-adapter-board.kicad_pcb  p2000t-slot1-adapter-board.kicad_pro  p2000t-slot1-adapter-board.kicad_sch  p2000t-slot1-adapter-board.rules
pcb/p2000t-slot1-adapter-board/GERBERS/: p2000t-slot1-adapter-board-B_Cu.gbr  p2000t-slot1-adapter-board-B_Mask.gbr  p2000t-slot1-adapter-board-B_Paste.gbr  p2000t-slot1-adapter-board-B_Silkscreen.gbr  p2000t-slot1-adapter-board-Edge_Cuts.gbr  p2000t-slot1-adapter-board-F_Cu.gbr  p2000t-slot1-adapter-board-F_Mask.gbr  p2000t-slot1-adapter-board-F_Paste.gbr  p2000t-slot1-adapter-board-F_Silkscreen.gbr  p2000t-slot1-adapter-board-NPTH.drl  p2000t-slot1-adapter-board-PTH.drl  p2000t-slot1-adapter-board-job.gbrjob
pcb/pico-sst39sf0x0-pcb/: fp-lib-table  pico-sst39sf0x0-pcb-bottom-bom.csv  pico-sst39sf0x0-pcb-bottom-cpl.csv  pico-sst39sf0x0-pcb.kicad_pcb  pico-sst39sf0x0-pcb.kicad_pro  pico-sst39sf0x0-pcb.kicad_sch  pico-sst39sf0x0-pcb.rules  pico-sst39sf0x0-pcb.scr  pico-sst39sf0x0-pcb.step  sym-lib-table
pcb/pico-sst39sf0x0-pcb/GERBERS/: pico-sst39sf0x0-pcb-B_Cu.gbr  pico-sst39sf0x0-pcb-B_Mask.gbr  pico-sst39sf0x0-pcb-B_Paste.gbr  pico-sst39sf0x0-pcb-B_Silkscreen.gbr  pico-sst39sf0x0-pcb-Edge_Cuts.gbr  pico-sst39sf0x0-pcb-F_Cu.gbr  pico-sst39sf0x0-pcb-F_Mask.gbr  pico-sst39sf0x0-pcb-F_Paste.gbr  pico-sst39sf0x0-pcb-F_Silkscreen.gbr  pico-sst39sf0x0-pcb-NPTH.drl  pico-sst39sf0x0-pcb-PTH.drl  pico-sst39sf0x0-pcb-job.gbrjob
pcb/pico-sst39sf0x0-pcb/components/: oshw_certificate.kicad_mod  oshw_certificate_stacked.kicad_mod  raspberry_pi_logo.kicad_mod  sst39sf040.kicad_sym
pcb/plcc32-adapter-board/: plcc32-adapter-board.kicad_pcb  plcc32-adapter-board.kicad_pro  plcc32-adapter-board.kicad_sch  plcc32-adapter-board.rules
pcb/plcc32-adapter-board/GERBERS/: plcc32-adapter-board-B_Cu.gbr  plcc32-adapter-board-B_Mask.gbr  plcc32-adapter-board-B_Paste.gbr  plcc32-adapter-board-B_Silkscreen.gbr  plcc32-adapter-board-Edge_Cuts.gbr  (+7 more)
scripts/: README.md  erase-test.py  interface-test.py  p2k-test.py  read-test.py  render.sh  write-test.py
(+2 files in other folders)
